--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,15 @@
-<header>
-  <nav>
-    <div class="nav-wrapper">
-      <ul>
-        <li routerLinkActive="green-background">
-          <a routerLink="/offline">Offline</a>
-        </li>
-        <li routerLinkActive="green-background">
-          <a routerLink="/singleplayer">Single Player</a>
-        </li>
-        <li routerLinkActive="green-background">
-          <a routerLink="/multiplayer">Multi-Player</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</header>
+<nav>
+  <ul>
+    <li routerLinkActive="active-link">
+      <a routerLink="/offline">Offline</a>
+    </li>
+    <li routerLinkActive="active-link">
+      <a routerLink="/singleplayer">Single Player</a>
+    </li>
+    <li routerLinkActive="active-link">
+      <a routerLink="/multiplayer">Multi-Player</a>
+    </li>
+  </ul>
+</nav>
+
 <router-outlet></router-outlet>
